force-app/main/default/objects/Appointment__c/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <label>Appointment Time</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>