force-app/main/default/objects/Appointment__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Duration (mins)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>