force-app/main/default/objects/Appointment__c/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>English</fullName><default>true</default><label>English</label></value>
            <value><fullName>Hindi</fullName><default>false</default><label>Hindi</label></value>
            <value><fullName>Hinglish</fullName><default>false</default><label>Hinglish</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>