force-app/main/default/objects/Appointment__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Normal</fullName><default>true</default><label>Normal</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Urgent</fullName><default>false</default><label>Urgent</label></value>
            <value><fullName>Emergency</fullName><default>false</default><label>Emergency</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>