force-app/main/default/objects/Appointment__c/fields/Rescheduled_From__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_From__c</fullName>
    <label>Rescheduled From</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Rescheduled Appointments</relationshipLabel>
    <relationshipName>Rescheduled_Appointments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>