force-app/main/default/objects/Appointment__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Web Chat</fullName><default>false</default><label>Web Chat</label></value>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>