force-app/main/default/objects/Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New Consultation</fullName><default>false</default><label>New Consultation</label></value>
            <value><fullName>Follow-up</fullName><default>false</default><label>Follow-up</label></value>
            <value><fullName>Emergency</fullName><default>false</default><label>Emergency</label></value>
            <value><fullName>Lab/Diagnostics</fullName><default>false</default><label>Lab/Diagnostics</label></value>
            <value><fullName>Chemotherapy</fullName><default>false</default><label>Chemotherapy</label></value>
            <value><fullName>Radiation</fullName><default>false</default><label>Radiation</label></value>
            <value><fullName>Surgery Pre-op</fullName><default>false</default><label>Surgery Pre-op</label></value>
            <value><fullName>Second Opinion</fullName><default>false</default><label>Second Opinion</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>